# WilloRHI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_release.bat
examples/: 01_HelloTriangle.cpp  01_Initialization.cpp  CMakeLists.txt  ExampleApplication.cpp  ExampleApplication.hpp  README.md
examples/resources/: compile_shaders.bat
examples/resources/shaders/: coloured_triangle_frag.slang  coloured_triangle_vert.slang  test_compute.slang  test_compute.spv
examples/shaders/: shared.slang
include/WilloRHI/: CommandList.hpp  Device.hpp  Flags.hpp  Forward.hpp  Instance.hpp  Pipeline.hpp  Queue.hpp  Resources.hpp  Swapchain.hpp  Sync.hpp  Types.hpp  Util.hpp  WilloRHI.hpp  WilloRHI_Shared.h
notes/: Device.md
notes/.obsidian/: workspace.json
src/: CommandList.cpp  Device.cpp  ImplCommandList.cpp  ImplCommandList.hpp  ImplDevice.cpp  ImplDevice.hpp  ImplPipeline.cpp  ImplPipeline.hpp  ImplQueue.cpp  ImplQueue.hpp  ImplResources.cpp  ImplResources.hpp  ImplSwapchain.cpp  ImplSwapchain.hpp  ImplSync.cpp  ImplSync.hpp  Instance.cpp  Swapchain.cpp  Types.cpp
